# action-tag-commit

./: .bumpversion.toml  .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml  script.py
.github/workflows/: push--tag.yaml  push.yaml
src/tag_commit/: cli.py  lib.py  settings.py
src/tag_commits/: cli.py  lib.py  logging.py  settings.py
src/tests/: test_cli.py  test_settings.py
